Routes and AJAX written for API call.
Facial recognition is working.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ config/initializers/secret_token.rb
 /.bundle
 /vendor/bundle
 
+/.env
+
 # these should all be checked in to normalise the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
 
